Backbones: set higher preference for intra-site BGP
It turns out that we don't need local-network-configuration-specific
rules to ensure that local site routes take precedence over other routes
on backbone hosts (as surmised in the parent commit's message). We can
just set the preference for local BGP peerings a bit higher than for the
rest.

--- a/ansible/roles/bird/templates/backbone.conf.j2
+++ b/ansible/roles/bird/templates/backbone.conf.j2
@@ -180,12 +180,14 @@ template bgp site from bgp_base {
         export where
             (is_internal() && source = RTS_DEVICE)
             || (is_default() && source ~ [ RTS_BGP, RTS_STATIC ]);
+        preference 110;
     };
     ipv6 {
         import where is_internal() && !is_default();
         export where
             (is_internal() && source = RTS_DEVICE)
             || (is_default() && source ~ [ RTS_BGP, RTS_STATIC ]);
+        preference 110;
     };
 }
 
