Update and re-enable RIP and radv configurations
These are used to extend the network to home networks. Details of the
current configuration:

* For IPv4, the home routers are the DHCP and default gateways. We use
  RIPv2 to advertise our internal and DN42 "default" routes to the home
  routers, so that they forward internal and DN42 traffic to the local
  backbone routers.

* IPv6 is more complicated. We want clients to configure two IPv6
  addresses (one GUA and one ULA), but our home router models do not
  support adding extra IPv6 prefixes. Therefore, we use ICMPv6 router
  advertisements sent from the backbone routers themselves (with BIRD's
  radv protocol). These advertisements use the RFC 4191 route
  information option to configure clients to send internal and DN42
  traffic to the local backbone routers, rather than the home routers.
  This works for the Windows and Linux client PCs that I've tested.
  However, not all systems accept this option (e.g. Android seems not
  to). We'll have to live with this, since our home router model
  (understandably) won't forward traffic whose source address is not
  from the LAN's (global) IPv6 subnet, and therefore using RIPng to
  advertise IPv6 routes to it doesn't help.

--- a/ansible/roles/bird/templates/base.conf.j2
+++ b/ansible/roles/bird/templates/base.conf.j2
@@ -47,6 +47,12 @@ include "{{ router_scope }}.conf";
 {% if router_site_role is defined %}
 include "{{ router_site_role }}.conf";
 {% endif %}
+{% if radv_ifs is defined %}
+include "radv.conf";
+{% endif %}
+{% if rip_ifs is defined %}
+include "rip.conf";
+{% endif %}
 
 template bgp service_advertisement from bgp_base {
     local as 4200000998;
